# FCNPC

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FCNPC.sln  LICENSE  Makefile  README.md  appveyor.yml  pawn.json  version.cmake
.github/ISSUE_TEMPLATE/: bug_report.md
FCNPC/: Address.cpp  Address.h  BitStream.cpp  BitStream.h  CallbackManager.cpp  CallbackManager.h  Common.h  ExceptionHandler.cpp  ExceptionHandler.h  Exports.def  FCNPC.vcproj  FCNPC.vcxproj  FCNPC.vcxproj.filters  Hooks.cpp  Hooks.h  Main.cpp  Main.h  Maths.cpp  Maths.h  Natives.cpp  Natives.h  Node.cpp  Node.h  NodeManager.cpp  NodeManager.h  Patches.cpp  Playback.cpp  Playback.h  Player.cpp  Player.h  PlayerManager.cpp  SAMPBullet.h  SAMPBulletSync.h  SAMPFunctions.cpp  SAMPFunctions.h  SAMPPlayer.h  SAMPPlayerPool.h  SAMPRPCParams.h  SAMPRakPeer.h  SAMPVehicle.h  (+12 more)
FCNPC/Release/: BuildLog.htm  mt.dep  vc90.idb
lib/Invoke/: Invoke.cpp  Invoke.h
lib/mapandreas/: MapAndreas.cpp  MapAndreas.h
lib/raknet/: BitStream.cpp  NetworkTypes.h
lib/snprintf/: snprintf.cpp
lib/strlcpy/: strlcpy.h
lib/subhook/: subhook_x86.c
lib/subhook/test/: test_prog
pawn/: FCNPC.inc  FCNPC.inc.in
pawn/Samples/: FCNPC.pwn  bg.pwn  citiziens.pwn  missions.pwn
pawn/Samples/recordings/: mission_2.rec
pawn/samples/: FCNPC.pwn  bg.pwn  citiziens.pwn  missions.pwn
pawn/samples/recordings/: mission_4.rec
sampsvr_files/: FCNPC.inc  colandreas.inc  mapandreas.inc
sampsvr_files/filterscripts/: FCNPC.pwn  bg.pwn  bodyguards.pwn  citizens.pwn  citiziens.pwn  missions.pwn  sample.pwn  traindrivers&pilots.pwn  traindrivers_pilots.pwn
sampsvr_files/npcmodes/recordings/: at400_ls_to_lv.rec  at400_lv_to_sf.rec  at400_sf_to_ls.rec  mission_1.rec  mission_3.rec  train_ls_to_sf.rec  train_lv_to_ls.rec  train_sf_to_lv.rec
src/: Address.cpp  Address.h  Address.hpp  AnimationInfo.cpp  AnimationInfo.h  AnimationInfo.hpp  BitStream.cpp  CAddress.cpp  CAddress.hpp  CAnimationInfo.cpp  CCallbackManager.cpp  CCallbackManager.hpp  CExceptionHandler.cpp  CExceptionHandler.hpp  CFunctions.cpp  CFunctions.h  CFunctions.hpp  CGangZonePool.h  CHooks.cpp  CHooks.hpp  CMaths.cpp  CMaths.hpp  CMovePath.cpp  CMovePath.hpp  CNode.cpp  CNode.hpp  CNodeManager.cpp  CNodeManager.hpp  CPickupPool.h  CPlayback.cpp  CPlayback.hpp  CPlayerData.cpp  CPlayerData.h  CPlayerData.hpp  CPlayerManager.cpp  CPlayerManager.hpp  CRecordManager.cpp  CRecordManager.hpp  CSAMPRakPeer.hpp  CServer.cpp  (+85 more)
src/SDK/: plugincommon.h
src/fopen_s/: fopen_s.cpp  fopen_s.h
src/raknet/: BitStream.cpp  BitStream.h
src/sampgdk/: sampgdk.c  sampgdk.h
src/sdk/: amxplugin.cpp
src/sdk/amx/: amx.h
src/snprintf/: snprintf.h
src/strlcpy/: strlcpy.cpp  strlcpy.h
src/subhook/: subhook.h
subhook/: subhook.c  subhook_linux.c
